--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,15 @@
   box-sizing: border-box;
 }
 
-body {
+html, body {
   margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
   background-color: #050510;
   background-image: 
     linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
@@ -19,7 +26,9 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   box-shadow: inset 0 0 100px rgba(0,0,0,0.9);
 }
 
